<resources>
    <string name="app_name">TourGuideApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- SnackBar messages -->
    <string name="not_connected">Your device is unconnected. Make sure you have internet connection!</string>
    <string name="connection_parsing_error">Error connecting server or wrong JSON format was downloaded. Call the developer or the system administrator.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_results_found">No results found</string>
    <string name="budapest_tour_guide_app">Budapest Tour Guide App</string>
    <string name="historical_places">Historical Places</string>
    <string name="events">Events</string>
    <string name="sport">Sport</string>
    <string name="restaurants">Restaurants</string>
    <string name="address">Address: </string>

    <!-- Entity Details Fragment Strings -->
    <string name="child_friendly">Child friendly: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pets_allowed">Pets allowed: </string>
    <string name="working_hours">Working hours: </string>
    <string name="event_date">Event Date: </string>


    <!-- List Item Strings -->
    <string name="loremipsum_35">Lorem ipsum dolor sit amet, consect</string>
    <string name="loremipsum_45">Lorem ipsum dolor sit amet, consectetuer adip</string>
    <string name="loremipsum_25">Lorem ipsum dolor sit ame</string>
    <string name="loremipsum_255">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis,</string>


</resources>
