<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <!-- placeholder for detailed description with image -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- image container -->
        <!-- The images and their origins by Entities:
        Hungarian Parliament:
            Készítette: Andrew Shiva / Wikipedia,
            CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=43533008
        Heroes' Square:
            Készítette: User:Sveter (Please credit as "Petr Šmerkl, Wikipedia" in case you use this outside WMF projects.) - A feltöltő saját munkája,
            CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=10705468
        Castle of Vajdahunyad:
            Készítette: User:Themightyquill - A feltöltő saját munkája,
            CC BY-SA 2.5, https://commons.wikimedia.org/w/index.php?curid=1240510
        Castle of Buda:
            By Andrés Nieto Porras from Palma de Mallorca, España - 61/365²: Opulencia. Unidentified locations in Hungary. (Fake coords! This pic taken about two km away!),
            CC BY-SA 2.0, https://commons.wikimedia.org/w/index.php?curid=24332305
        Mathias Church:
            Készítette: VinceB - A feltöltő saját munkája,
            CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=18185884
        Astral Projection LIVE:
            CC0 -> https://www.pexels.com/photo/lights-party-dancing-music-2143/
        Monkey Boulder:
            from monkeyboulder.hu, with approval of owner

       -->
        <LinearLayout
            android:id="@+id/details_image_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_entity_details_image_height"
            android:orientation="horizontal">

            <!-- progress bar. It's visilbe until download of the image is finished -->
            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/details_image_loader"
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />

            <!-- image of Entity. It will become visible when download successfully finished -->
            <!-- default image from material.io -->
            <ImageView
                android:id="@+id/details_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_menu_gallery"
                android:visibility="gone" />
        </LinearLayout>

        <!-- placeholder of all text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_layout_padding"
            android:orientation="vertical">
            <!-- Title text view -->
            <TextView
                android:id="@+id/details_txt_title"
                style="@style/entity_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/loremipsum_35" />

            <!-- Detailed description textview -->
            <TextView
                android:id="@+id/details_txt_description"
                style="@style/entity_description_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/loremipsum_255" />

            <!-- placeholder for address -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- static Address text -->
                <TextView
                    style="@style/entity_address_style"
                    android:paddingRight="@dimen/list_item_layout_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <!-- Address variable text -->
                <TextView
                    android:id="@+id/details_txt_address"
                    style="@style/entity_description_style"
                    android:layout_width="@dimen/o_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/layout_weight_1"
                    tools:text="@string/loremipsum_45" />
            </LinearLayout>

            <!-- Placeholder for ChildFriendly and PetsAllowed information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Child friendly static text -->
                <TextView
                    style="@style/entity_address_style"
                    android:paddingRight="@dimen/list_item_layout_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/child_friendly" />

                <!-- Child friendly variable -->
                <TextView
                    android:id="@+id/details_txt_children_friendly"
                    style="@style/entity_description_style"
                    android:layout_width="@dimen/o_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/layout_weight_1"
                    android:text="@string/yes" />

                <!-- Pets allowed static text -->
                <TextView
                    style="@style/entity_address_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/list_item_layout_padding"
                    android:text="@string/pets_allowed" />

                <!-- Pets allowed variable -->
                <TextView
                    android:id="@+id/details_txt_pets_allowed"
                    android:layout_width="@dimen/o_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/layout_weight_1"
                    android:text="@string/yes" />
            </LinearLayout>

            <!-- Working hours/date of event placeholder layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Working hours/date of event static text -->
                <TextView
                    android:id="@+id/details_txt_working_hours_or_event_date"
                    style="@style/entity_address_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/list_item_layout_padding"
                    android:text="@string/working_hours" />

                <!-- Working hours/date of event variable -->
                <TextView
                    android:id="@+id/details_txt_working_hours"
                    style="@style/entity_description_style"
                    android:layout_width="@dimen/o_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/layout_weight_1"
                    tools:text="Lorem ipsum dolor sit ame" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>